--- a/privacy-policy-mac-locker.html
+++ b/privacy-policy-mac-locker.html
@@ -2,11 +2,11 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Privacy Policy - mac-locker</title>
+  <title>Privacy Policy - TapLocks</title>
 </head>
 <body style="font-family: sans-serif; max-width: 700px; margin: 50px auto; line-height: 1.6;">
-  <h1>Privacy Policy for mac-locker</h1>
-  <p>mac-locker does not collect, store, or share any personal data.</p>
+  <h1>Privacy Policy for TapLocks</h1>
+  <p>TapLocks does not collect, store, or share any personal data.</p>
   <p>The app uses standard Apple APIs such as Touch ID for local authentication purposes only.</p>
   <p>No data is transmitted to any server or third party. All functionality remains on-device.</p>
   <p>If you have any questions, feel free to contact: <strong>akif.tonmaister58@gmail.com</strong></p>
